# industrial

./: Cargo.toml  Makefile.toml
assets/: industrial.ldtk
src/: components.rs  constants.rs  main.rs  resources.rs  utils.rs
src/plugins/: mod.rs
src/plugins/enemy/: mod.rs  setup.rs
src/plugins/player/: mod.rs
src/plugins/player/systems/: mod.rs  setup.rs
src/systems/: animation.rs  movement.rs  setup.rs
src/systems/player/: action.rs  animation.rs  mod.rs  movement.rs  setup.rs
src/utils/: mod.rs  texture_atlas.rs
web/: index.html  wasm.js
