[package]
authors = ["Anton Kalinin <anton.kalinin@wolt.com>"]
edition = "2018"
name = "industrial"
version = "0.1.0"

[features]
default = [
  "bevy/bevy_winit",
  "bevy/render",
  "bevy/png",
]

native = [
  "bevy/bevy_wgpu",
]

web = [
  "bevy_webgl2",
]

[dependencies]
bevy = {version = "0.5.0", default-features = false}
bevy_webgl2 = {version = "0.5.0", optional = true}

getrandom = {version = "0.1", features = ["wasm-bindgen"]}
rand = "0.7"
winit = {version = "0.24.0"}
